Fix sidebar-toggle on small screen

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -143,7 +143,7 @@ p {
 
 
 
-/* ********************Pages' Section Area Styling ***********/
+/* ********************Pages Section Area Styling ***********/
 
 .section {
     padding: 5rem 0;
@@ -173,7 +173,7 @@ p {
     position: fixed;
     top: 1rem;
     right: 1.5rem;
-    font-size: 2rem;
+    font-size: 1.75rem;
     background: transparent;
     border-color: transparent;
     color: var(--fecc-primary-5);
@@ -192,7 +192,7 @@ p {
       transform: scale(1);
     }
     50% {
-      transform: scale(1.5);
+      transform: scale(1.3);
     }
     100% {
       transform: scale(1);
@@ -224,7 +224,7 @@ p {
   img .logo {
     justify-self: center;
     height: 40px;
-    width: 100%;
+    
   }
   
   .links a {
@@ -297,17 +297,12 @@ p {
     color: var(--fecc-primary-10)
   }
   
-  @media screen and (max-width: 993px) {
+  @media screen and (min-width: 993px) {
     .sidebar {
       width: 400px;
-    }
-    
-.sidebar-toggle {  
-  top: 1rem;
-  right: 1.5rem;
-  font-size: 1.1rem;
-  
+    }     
 }
+
 .top-center {
   max-width: 1170px;
   margin: 0 auto;
@@ -320,11 +315,11 @@ p {
 .fecc {
 font-family: var(--ff-fecc-logo);
 color: var(--fecc-primary-6);
-font-size: 1.5rem;
+font-size: 2.25rem;
 padding: 40px 20px;
 margin: 20px auto; 
 }
-  }
+  
   
   /*  End Side Bar section */
 
@@ -359,6 +354,7 @@ margin: 20px auto;
   animation: flickering 5s infinite;
   border: 2px solid;
   border-radius: var(--radius);
+  margin-bottom: 2rem;
 }
 
 @keyframes flickering {
@@ -518,6 +514,10 @@ header::after {
 
 @media screen and (max-width: 600px) {
 
+  .sidebar-toggle {
+    top: .5rem;
+  }
+
   .fecc {
     font-family: var(--ff-fecc-logo);
     color: var(--fecc-primary-6);
@@ -531,7 +531,7 @@ header::after {
       background: var(--fecc-grey-1);
     
       padding: 0.2rem .6rem ;
-      margin-bottom: 1rem;
+      margin-bottom: 1.75rem;
       font-size: 0.75rem;
      
     }
